removed now superfluous module export/reads
N.B. these were necessary in the attempt to enable/use JUnit5's logging infrastructure for the new functionality/tests